--- a/web_back/login.html
+++ b/web_back/login.html
@@ -25,7 +25,7 @@
                 <i class="iconfont icon-key"></i>
                 <input type="text" class="input_txt" id="username" placeholder="邮箱/手机号">
                 <input type="password" class="input_pass" id="password" placeholder="密码">
-                <input type="submit" class="input_sub" value="登 录" id="btn">
+                <input type="button" class="input_sub" value="登 录" id="btn">
             </form>
         </div>
     </div>
