--- a/web_back/article_release.html
+++ b/web_back/article_release.html
@@ -35,6 +35,7 @@
                     <div class="col-sm-10">
                         <input type="file" id="exampleInputFile">
                     </div>
+                    <img id='ImgPreview' src="./images/login_bg.jpg" alt="" style="width:200px; margin-left: 15px">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章类别：</label>
@@ -81,5 +82,17 @@
     </div>
 
 </body>
-
+<script>
+    $('#exampleInputFile').on('change',function(){
+        //优化
+        var curFile =  this.files[0];//input选中文件名字，一个对象
+        if(curFile){
+            var curFileUrl = URL.createObjectURL(curFile);
+            $('#ImgPreview').attr('src',curFileUrl);
+        }
+        else{
+            $('#ImgPreview').attr('src','./images/login_bg.jpg'); 
+        }
+    })
+</script>
 </html>
