文章分类的显示和删除

--- a/web_back/index.html
+++ b/web_back/index.html
@@ -113,8 +113,8 @@
 
 </body>
 <script src="./js/jquery-1.12.4.min.js"></script>
-<script src="js/config.js"></script>
-<script src="js/User.js"></script>
+<script src="./js/Util/config.js"></script>
+<script src="./js/Util/User.js"></script>
 <script>
     $("#logout").on("click", function () {
         User.logout().then(function (res) {
