--- a/web_back/login.html
+++ b/web_back/login.html
@@ -31,8 +31,8 @@
     </div>
 </body>
 <script src="js/jquery-1.12.4.min.js"></script>
-<script src="js/config.js"></script>
-<script src="./js/User.js"></script>
+<script src="./js/Util/config.js"></script>
+<script src="./js/Util/User.js"></script>
 <!-- 用户登录 -->
 <script>
     
